# python-fastapi-casdoor

./: .gitignore  LICENSE  README.md  deps.py  models.py  settings.py  setup.cfg  setup.py  utils.py  validators.py
.github/workflows/: publish-to-test-pypi.yml
scripts/: build.sh
src/: context.py  init.py
src/fastapi_casdoor/: __init__.py  models.py  router.py
