[metadata]
name = fastapi-casdoor
author = Winrey
author_email = i@iaside.com
version = 0.1.8
description = Integration Casdoor with FastAPI
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/winrey/python-fastapi-casdoor
license_files = LICENSE
keywords = auth, casdoor, fastapi, dependency
classifiers = 
    Development Status :: 3 - Alpha
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Framework :: FastAPI
    Topic :: Internet :: WWW/HTTP
    Natural Language :: English
    Natural Language :: Chinese (Simplified)
    

[options]
package_dir=
    = src
packages=find:
python_requires = >=3.6
install_requires =
    fastapi
    python-dateutil
    PyJWT
    pydantic

[options.packages.find]
where=src
